# CppKakish

./: CMakeLists.txt  JSONWork.cpp  JSONWork.h  Person.cpp  Person.h  main.cpp
Persons/: Person.cpp  Person.h  PersonException.cpp  PersonException.h
Persons/Guest/: Guest.cpp  Guest.h
Products/: Products.cpp  Products.h  ProductsList.cpp  ProductsList.h
